syntax = "proto3";

option csharp_namespace = "Worker_GrpcService.Protos.Server";
import "google/protobuf/empty.proto";

package GenderGrpcService;

service GenderGrpcService {
	rpc GetAllGenders(google.protobuf.Empty) returns (GetAllGendersResponse){}
	rpc GetGenderById(GetGenderByIdRequest) returns (GenderGrpc){}
}

message GetAllGendersResponse {
	repeated GenderGrpc Genders = 1;
}

message GetGenderByIdRequest {
	int32 Id = 1;
}

message GenderGrpc {
	int32 Id = 1;
	string Name = 2;
}


